// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownCheckboxItem > Snapshots > should match its default snapshot 1`] = `
<div
  aria-checked="false"
  class="leading-5 px-2 mx-2 py-1.5 rounded-lg sds-theme-plaid:rounded-none hover:bg-gray-50 dark:hover:bg-gray-700"
  data-id="sds-dropdown-checkbox-item"
  role="menuitemcheckbox"
>
  <label
    class="flex gap-2 items-start cursor-pointer"
    for="v-0"
  >
    <input
      class="focus:ring-0 mt-0.5"
      id="v-0"
      type="checkbox"
    />
    <span
      class="text-gray-900 hover:text-black dark:text-gray-50 dark:hover:text-white block w-full"
    >
      <!-- @slot Label content for the checkbox. -->
      
      Test Item
      
    </span>
  </label>
</div>
`;

exports[`DropdownCheckboxItem > Snapshots > should match snapshot when checked 1`] = `
<div
  aria-checked="true"
  class="leading-5 px-2 mx-2 py-1.5 rounded-lg sds-theme-plaid:rounded-none hover:bg-gray-50 dark:hover:bg-gray-700"
  data-id="sds-dropdown-checkbox-item"
  role="menuitemcheckbox"
>
  <label
    class="flex gap-2 items-start cursor-pointer"
    for="v-0"
  >
    <input
      checked=""
      class="focus:ring-0 mt-0.5"
      id="v-0"
      type="checkbox"
    />
    <span
      class="text-gray-900 hover:text-black dark:text-gray-50 dark:hover:text-white block w-full"
    >
      <!-- @slot Label content for the checkbox. -->
      
      Test Item
      
    </span>
  </label>
</div>
`;

exports[`DropdownCheckboxItem > Snapshots > should match snapshot when disabled 1`] = `
<div
  aria-checked="false"
  class="leading-5 px-2 mx-2 py-1.5 rounded-lg sds-theme-plaid:rounded-none hover:bg-gray-50 dark:hover:bg-gray-700"
  data-id="sds-dropdown-checkbox-item"
  role="menuitemcheckbox"
>
  <label
    class="flex gap-2 items-start cursor-pointer cursor-not-allowed opacity-50"
    for="v-0"
  >
    <input
      class="focus:ring-0 mt-0.5"
      disabled=""
      id="v-0"
      type="checkbox"
    />
    <span
      class="text-gray-900 hover:text-black dark:text-gray-50 dark:hover:text-white block w-full"
    >
      <!-- @slot Label content for the checkbox. -->
      
      Test Item
      
    </span>
  </label>
</div>
`;

exports[`DropdownCheckboxItem > Snapshots > should match snapshot when indeterminate 1`] = `
<div
  aria-checked="false"
  class="leading-5 px-2 mx-2 py-1.5 rounded-lg sds-theme-plaid:rounded-none hover:bg-gray-50 dark:hover:bg-gray-700"
  data-id="sds-dropdown-checkbox-item"
  role="menuitemcheckbox"
>
  <label
    class="flex gap-2 items-start cursor-pointer"
    for="v-0"
  >
    <input
      class="focus:ring-0 mt-0.5"
      id="v-0"
      type="checkbox"
    />
    <span
      class="text-gray-900 hover:text-black dark:text-gray-50 dark:hover:text-white block w-full"
    >
      <!-- @slot Label content for the checkbox. -->
      
      Test Item
      
    </span>
  </label>
</div>
`;
